--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,7 +13,8 @@ body {
 
 /* background color on top of bg image*/
 .hero {
-    position: absolute;
+	position: absolute;
+	display: none;
     min-height: 100vh;
     min-width: 100vw;
     top: 0;
@@ -68,13 +69,9 @@ body {
 #icon-thermometer {
 	font-size: 5rem;
 }
-#myVideo {
-	position: fixed;
-	right: 0;
-	bottom: 0;
-	min-width: 100%;
-	min-height: 100%;
-  }
+#searchBar{
+	text-align: center;
+}
 
 
 
